[SQONE-609]: Updated margin styles in the admin for blocks with fullalign to fix alignment issue

--- a/wp-content/themes/core/assets/css/src/admin/block-editor/editor.pcss
+++ b/wp-content/themes/core/assets/css/src/admin/block-editor/editor.pcss
@@ -19,15 +19,22 @@
 		margin-bottom: 0;
 	}
 
-	/* CASE: Alignment: Full */
-	.wp-block[data-align="full"] {
-		margin-left: auto;
-		margin-right: auto;
-	}
-
 	/* Reset/remove the browser's default margin n figure inside the block editor. */
 	figure {
 		margin: 0;
+	}
+}
+
+/**
+ * Reset left and right margin for full aligned blocks
+ * to overcome aggressive WordPress core styles.
+ */
+html :where(.editor-styles-wrapper) {
+	.block-editor-block-list__layout.is-root-container > {
+		.wp-block[data-align=full] {
+			margin-left: auto;
+			margin-right: auto;
+		}
 	}
 }
 
